[package]
name = "super_disco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", version = "0.1.1" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", version = "0.1.0" }
rodio = "0.16"
